--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "react-loader",
-  "version": "1.0.0",
+  "name": "rct-loader",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "directories": {
     "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tamamadesu/rct-loader.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
