--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "htmlparser2": "^3.9.2",
+    "node-sass": "^4.7.2",
     "pug": "^2.0.0-rc.4"
   }
 }
